c4prj2_input/grade.txt
Grading at Mon 11 Mar 2024 03:05:44 AM UTC
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
Compiling future.c -> future.o
future.c: In function ‘add_future_card’:
future.c:10:8: error: ‘future_cards_t’ {aka ‘struct future_cards_tag’} has no member named ‘deck’; did you mean ‘decks’?
   10 |    fc->deck[i].n_cards = 0 ;
      |        ^~~~
      |        decks
Compilation of future.c failed

Overall Grade: F
